fix overflow mobile

--- a/static-e-commerce/css/custom.css
+++ b/static-e-commerce/css/custom.css
@@ -26,6 +26,7 @@
       right: 0;
       bottom: 0;
       z-index: 1;
+      overflow-y: hidden !important;
     }
   }
 
